--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <html>
-
 <head>
+    <title>Luke Hellis</title>
 
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style type="text/css">
+ 
+body {
+        background-color: #f0f0f2;
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;    
+    }
+a:link, a:visited {
+        color: green;
+    }
+a:hover {
+  background-color: lightblue;
+    }
+ #backToTop
+ {
+    background-color: red;
+    width: 25px;
+    position: absolute;
+    right: 0;
+ }
+
+     </style>    
 </head>
 
-<body bgcolor="red">
-    <h1>A Heading</h1>
-    <p>Something
-</body>
+<body>
+    
+    <h1>Test header</h1>
+    
+    <p>Test text</p>
 
+    <a href="test.test">Test Link</a>
+
+</body>
 </html>
